날씨는 whether 아니고 weather (모든 파일,객체, 필드 이름 수정), Collector list -> toList로 변경